--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon",
-    "build": "tsc --project ./" 
+    "build": "tsc --project ./"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,8 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "mongoose": "^6.8.3"
   }
-  
 }
