--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   },
   "homepage": "https://github.com/SE-2023/Toilet-backend#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "mongoose": "^6.8.3"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.1"
   }
 }
