--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ MONGO_URI="mongodb+srv://Toilet555:Toilet555@cluster0.b0raqi8.mongodb.net/dev?re
 PORT=4000
 
 JWT_SECRET="cat"
+
+CLOUDINARY_NAME=dvzib8cte
+CLOUDINARY_API_KEY=192494392215866
+CLOUDINARY_API_SECRET=5uGKxDU0UWmbCtKs7hAS_YzrByY
+CLOUDINARY_PUBLIC_URL=https://res.cloudinary.com/dvzib8cte/image/upload/v1660316751/OnlineStore/
+CLOUDINARY_FOLDER=OnlineStore
