--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ PORT=4000
 
 JWT_SECRET="cat"
 
-CLOUDINARY_NAME=dvzib8cte
-CLOUDINARY_API_KEY=192494392215866
-CLOUDINARY_API_SECRET=5uGKxDU0UWmbCtKs7hAS_YzrByY
-CLOUDINARY_PUBLIC_URL=https://res.cloudinary.com/dvzib8cte/image/upload/v1660316751/OnlineStore/
-CLOUDINARY_FOLDER=OnlineStore
+CLOUDINARY_NAME="dvzib8cte"
+CLOUDINARY_API_KEY="192494392215866"
+CLOUDINARY_API_SECRET="5uGKxDU0UWmbCtKs7hAS_YzrByY"
+CLOUDINARY_PUBLIC_URL="https://res.cloudinary.com/dvzib8cte/image/upload/v1660316751/OnlineStore/"
+CLOUDINARY_FOLDER="OnlineStore"
