--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,16 +2,23 @@ name: Deploy DEV
 
 on:
   push:
-    branches: ["main"]
+    branches: ["dev"]
+
 jobs:
   build:
-    runs-on: 
-    - self-hosted
-    - dev-server
-
+    runs-on:
+      - self-hosted
+      - dev-server
     steps:
       - uses: actions/checkout@v3
-      - run: docker build -t my-nodejs-app .
-      - run: docker run -d -p 4000:4000 my-nodejs-app
+      - run: node -v
+      - run: npm install
+      - run: npm run build
 
-# ////
+  deploy:
+    needs: build
+    runs-on:
+      - self-hosted
+      - dev-server
+    steps:
+      - run: pm2 start ecosystem.config.js --env dev
