--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     runs-on:
       - self-hosted
+      - dev-server
     steps:
       - uses: actions/checkout@v3
       - run: node -v
@@ -18,5 +19,6 @@ jobs:
     needs: build
     runs-on:
       - self-hosted
+      - dev-server
     steps:
       - run: pm2 start ecosystem.config.js --env dev
